complete / fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,8 @@ body {
 }
 
 .main-content {
+    padding-right: 20px;
+    padding-left: 20px;
     width: 60%;
     float: left;
 }
@@ -152,14 +154,6 @@ body {
     background-size: cover;
     position: relative;
     margin-bottom: 20px;
-}
-
-.sidebar.left {
-    padding-right: 10px;
-}
-
-.sidebar.right {
-    padding-left: 10px;
 }
 
 .sidebar.left .banner {
